<resources>
    <string name="app_name">JuzOnce Technician</string>
    <string name="my_works">My Works</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="something_went_wrong">Something went wrong!</string>

    <!--DrawerLayout-->
    <string name="open_msg">open_msg</string>
    <string name="close_msg">close_msg</string>

    <string name="label_sort">Sort</string>
    <string name="label_filter">Filter</string>
    <string name="label_clear">Clear</string>
    <string name="label_search">Search</string>
    <string name="label_required_amount">Required Amount</string>
    <string name="label_raised_amount">Raised Amount</string>
    <string name="label_balance_amount">Balance Amount</string>
    <string name="action_contribute">Contribute</string>
    <string name="label_title_filter">Filter by</string>
    <string name="label_title_sort">Sort by</string>
    <string name="label_date">Date</string>
    <string name="label_initiator">Initiator</string>
    <string name="label_case_number">Case number</string>

    <!--ravi-->
    <string name="requiredAmount">Required Amount</string>
    <string name="raisedAmount">Raised Amount</string>
    <string name="balanceAmount">Balance Amount</string>
    <string name="contribute">Contribute</string>

    <string name="followers">Followers</string>
    <string name="serialNo">SerialNo :</string>
    <string name="defaultLanguage">Default Language</string>
    <string name="save">Save</string>
    <string name="home_page_customization">Home page customization</string>

    <string name="action_filter">Filter</string>
    <string name="action_clear">Clear</string>
    <string name="action_follow">Follow</string>

    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_account">I don\'t have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="mobile_or_email">Mobile No/Email</string>
    <string name="password">Password</string>
    <string name="enter_mobilno_or_email">Enter the Mobile No/Email</string>
    <string name="enter_mobilno">Enter Mobile No</string>
    <string name="enter_valid_mobilno_or_email">Enter valid Mobile No/Email</string>
    <string name="enter_valid_mobilno">Enter a valid Mobile No</string>
    <string name="enter_valid_otp">Enter a valid OTP</string>
    <string name="enter_password">Enter the Password</string>


    <!--Login dialog-->

    <string name="proceed">Proceed</string>
    <string name="kindly_sign_in">Sorry! you are ot signed in/signed up \n kindly sign in/Signup</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="label_no_case">No case found</string>
    <string name="label_no_domain">No domain found</string>

    <string name="date_">Date :</string>
    <string name="time_">Time :</string>
    <string name="action_complete">Complete</string>
    <string name="label_welcome">Welcome</string>
    <string name="label_name">Name</string>
    <string name="gender">Gender</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_save_profile">Save Profile</string>
    <string name="action_cancel">Cancel</string>
    <string name="label_mobile_no">Mobile Number</string>
    <string name="label_address">Address</string>
    <string name="label_pincode">Pincode</string>
    <string name="label_email">Email</string>
    <string name="label_logout">Logout</string>
    <string name="label_my_profile">My Profile</string>
    <string name="city">City</string>
    <string name="country">Country</string>

    <string name="address_required">Address required</string>
    <string name="pincode_required">Pincode required</string>
    <string name="username_required">Username required</string>
    <string name="email_address_required">Email address required</string>
    <string name="mobile_no_required">Mobile number required</string>
    <string name="valid_email_required">Valid email address required</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="label_change_password">Change Password</string>
    <string name="label_old_pwd">Old Password</string>
    <string name="label_new_pwd">New Password</string>
    <string name="label_confirm_pwd">Confirm Password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="incorrect_password">New password and confirm password incorrect</string>

    <string name="choose_an_action">Choose an action</string>
    <string name="select_from_gallery">Select image from gallery</string>
    <string name="select_take_photo">Take a photo on the camera</string>
    <string name="select_file">Select a file</string>
    <string name="picture_selected">Picture has been selected</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_first_name">First Name</string>

    <string name="select_video_from_gallery">Select video from gallery</string>
    <string name="select_take_video">Take a video on the camera</string>
    <string name="video_saved_to">Video Saved to </string>
    <string name="action_start">Start</string>
    <string name="label_enter_otp">Enter OTP</string>
    <string name="label_enter_description">Enter description</string>
    <string name="label_enter_amount">Enter Amount</string>
    <string name="label_total_amount">Total Amount :</string>
    <string name="label_settlement">Settlement :</string>
    <string name="label_given_amount">Given Amount :</string>
    <string name="label_no_settlement">No settlement</string>

    <string name="default_notification_channel_id">123456</string>
    <string name="action_send_otp">Request OTP</string>
    <string name="action_verify_otp">Verify OTP</string>
    <string name="label_wrong_number">Wrong Number</string>

</resources>
