<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_tiny"
        android:background="@color/dark_blue"
        android:gravity="center"
        android:textSize="16sp"
        android:padding="@dimen/spacing_tiny"
        android:text="@string/label_change_password"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilOldPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_tiny"
        android:hint="@string/label_old_pwd"
        android:textColorHint="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etOldPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNewPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_tiny"
        android:hint="@string/label_new_pwd"
        android:textColorHint="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/tilOldPwd"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNewPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_tiny"
        android:hint="@string/label_confirm_pwd"
        android:textColorHint="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/tilNewPwd"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/spacing_tiny"
        android:backgroundTint="@color/light_blue"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/action_cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/btnChangePwd"
        app:layout_constraintEnd_toStartOf="@+id/btnChangePwd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnChangePwd" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChangePwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_tiny"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/light_blue"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/action_change_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintTop_toBottomOf="@+id/tilConfirmPwd" />

</androidx.constraintlayout.widget.ConstraintLayout>