<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.bpositive.technician.login.viewModel.LoginViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.bpositive.technician.core.widget.MvvmImageView
                android:id="@+id/taawonImageView"
                android:layout_width="@dimen/header_img_width"
                android:layout_height="@dimen/header_img_height"
                android:layout_marginTop="@dimen/toolbar"
                app:layout_constraintBottom_toTopOf="@+id/user_name_input_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_about_us" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/toolbar"
                android:layout_marginEnd="16dp"
                android:hint="@string/mobile_or_email"
                app:layout_constraintBottom_toTopOf="@+id/password_input_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/taawonImageView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userNameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/edit_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                app:layout_constraintEnd_toEndOf="@+id/user_name_input_layout"
                app:layout_constraintStart_toStartOf="@+id/user_name_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/user_name_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="@dimen/edit_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.bpositive.technician.core.widget.MvvmTextView
                android:id="@+id/l_forgot_password_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="20sp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="@id/user_name_input_layout"
                app:layout_constraintStart_toStartOf="@+id/user_name_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/password_input_layout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signinBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                app:cornerRadius="@dimen/btn_corner_radius"
                android:gravity="center"
                android:textSize="@dimen/buttons"
                app:layout_constraintEnd_toEndOf="@id/l_forgot_password_txt"
                app:layout_constraintStart_toStartOf="@+id/l_forgot_password_txt"

                app:layout_constraintTop_toBottomOf="@+id/l_forgot_password_txt" />

            <com.bpositive.technician.core.widget.MvvmTextView
                android:id="@+id/l_dont_have_account_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:text="@string/dont_have_account"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signinBtn" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signupBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                app:backgroundTint="@color/colorAccent"
                app:cornerRadius="@dimen/btn_corner_radius"
                android:gravity="center"
                android:textSize="@dimen/buttons"
                app:layout_constraintEnd_toEndOf="@id/signinBtn"
                app:layout_constraintStart_toStartOf="@+id/signinBtn"
                app:layout_constraintTop_toBottomOf="@+id/l_dont_have_account_txt" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>